traditional polymorophism implemented and why its bad --> see .txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "random": "cpp",
         "optional": "cpp",
         "iosfwd": "cpp"
-    }
+    },
+    "C_Cpp.loggingLevel": "Debug",
+    "lldb.verboseLogging": true
 }
